Add author info a home page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@ title: mu.mu.rs
     {% endfor %}
     </div>
     {% include posts-pager.html %}
+    <br/>
+    {% include author-info.html %}
 </div>
 {% include side-nav.html %}
